# stencil

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  tree.txt
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: env.d.ts  main.tsx  routeTree.gen.ts  router.ts  styles.css
frontend/src/components/: Dashboard.tsx  GraphsPage.tsx  Header.tsx  Layout.tsx  LogsPage.tsx  QueryPage.tsx  TimeSeriesPage.tsx  TraceDetailPage.tsx  TracesPage.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  dialog.tsx  drawer.tsx  input.tsx  sheet.tsx  sidebar.tsx
frontend/src/lib/: api.ts  queries.ts
frontend/src/lib/components/: LogsView.svelte  Sidebar.svelte  TodoExample.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  __root.tsx  graphs.tsx  index.tsx  logs.tsx  traces.tsx
frontend/src/routes/traces/: $traceId.tsx
frontend/src/types/: api.ts  timeseries.ts
migrations/: 20250531020720_create_tables.sql  20250718012711_store_attrs_as_json.sql
src/: handlers.rs  main.rs
src/handlers/: crud.rs  types.rs
