[package]
name = "stencil"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
axum = "0.8"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hyper = { version = "0.14", features = ["full"] }
time = "0.3.41"
rust_decimal = { version = "1.37.1", features = ["db-postgres"] }
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.10"
once_cell = "1.18.0"
anyhow = "1.0"
bcrypt = "0.17.0"
rust_decimal_macros = "1.32"
async-trait = "0.1.88"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
